src/style.css
* {
  margin: 0px;
  border: 0px;
  box-sizing: border-box;
}

body {
  height: 100dvh;
  background-color: black;
}

#content {
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 25px;
  padding: 25px;
}

.gameBoard {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: repeat(10, 1fr);
  gap: 5px;
}

.gridCell {
  border: 1px solid white;
}

div.hit {
  background-color: green;
}

.miss {
  background-color: red;
}

.ship {
  background-color: gray;
}

